--- a/ArcaneInsight/pom.xml
+++ b/ArcaneInsight/pom.xml
@@ -47,5 +47,12 @@
       <scope>test</scope>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/me.xdrop/fuzzywuzzy -->
+    <dependency>
+      <groupId>me.xdrop</groupId>
+      <artifactId>fuzzywuzzy</artifactId>
+      <version>1.4.0</version>
+    </dependency>
+
   </dependencies>
 </project>
