--- a/ArcaneInsight/pom.xml
+++ b/ArcaneInsight/pom.xml
@@ -48,6 +48,14 @@
       <version>2.0.7</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-simple</artifactId>
+      <version>2.0.7</version>
+      <scope>runtime</scope>
+    </dependency>
+
     <!-- dependencias testing -->
     <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
     <dependency>
